app/assets/stylesheets/application.css.scss
/* ... */
.navbar a {
  font-size: 20px;
  margin-left: 5px;
  margin-right: 65px;
};

.navbar-right a {
  margin-left: 60px;
  margin-right: 5px;
};

li.nav-item {
  float: left;
  position: relative;
  padding: 15px;
  margin: 20px;
};


ul.view-posts {
  clear: both;
};

div.user-posts-index {
  clear: both;
};

div.footer {
  display: block;
  clear: both;
};

.m-content.active {
  z-index: 100;
  height: 520px;
  width: 400px;
  position: relative;
  margin: 0px auto;
  margin-top: 157px;
  border-radius: 10px;
  padding: 50px;
  background-color: rgb(137, 202, 236);
  padding-top: 20px;
};

.m-backdrop.inactive {
  z-index: 80;
  position: fixed;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  background-color: rgba(0, 0, 0, 0.6);
};

button.close {
  font-size: 40px;
};

